View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025387 | Open CASCADE | OCCT:Samples | public | 2014-10-16 15:27 | 2014-11-12 09:54 |
Reporter | apn | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.8.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025387: Error appears during export to STEP operation in ImportExport MFC sample | ||||
Description | Following error appears during export to STEP operation in ImportExport MFC sample: "Attempted an unsupported operation." But export is done and shape is valid. | ||||
Steps To Reproduce | 1. Launch MFC sample "ImportExport" 2. Import shape in any format 3. Select imported shape 4. Try to export shape to STEP format Error appears in sample but the step file is created. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Note that the same problem exists in 6.7.0 and 6.7.1 |
|
Branch CR25387 has been created by apn. SHA-1: 5e907fa76e5000066198c609f669bbee61d58543 Detailed log of new commits: Author: apn Date: Thu Oct 23 13:05:53 2014 +0400 0025387: Error appears during export to STEP operation in ImportExport MFC sample Remove unused functionality for STEP and CSFDB import\export. |
|
Error in ImportExport MFC sample was fixed (in export to STEP and CSFDB). Please, review. |
|
No remarks, please integrate |
|
Projects are not updated (still contain removed files), please correct! |
|
At the end, it does not work for me at all (reports "Writing failed"; I have imported hammer.igs and tried to write it to STEP) |
|
Branch CR25387_1 has been created by ski. SHA-1: f3cb7f22ffaa02a4bb56c4474e85261d20131061 Detailed log of new commits: Author: ski Date: Fri Oct 24 12:44:52 2014 +0400 0025387: Error appears during export to STEP operation in ImportExport MFC sample Combobox for selection of translation mode is available in Export to STEP and CSFDB files. |
|
ComboBox for selection of translation mode is available in export to STEP and CSFDB files in CR25387_1. It's possible to export any format to STEP/STP only using ShellBasedSurfaceModel and GeometricCurveSet modes. (export using ManifoldSolidBrep and FacetedBrep modes leads to errors). This behavior is the same as in Qt ImportExport sample. Please, review. |
|
And it's possible to convert in CSFDB format using WithTriangle or WithoutTriangle modes. |
|
Branch CR25387_2 has been created by abv. SHA-1: c9fb1c2c7e4fa8b769d035934fb1f0b039abdb9c Detailed log of new commits: Author: ski Date: Fri Oct 24 12:44:52 2014 +0400 0025387: Error appears during export to STEP operation in ImportExport MFC sample Combo-box for selection of translation mode is available in Export to STEP and CSFDB files. Default valuer for STEP export mode is set to As Is, i.e. automatic selection. |
|
Reviewed and corrected to have "As Is" as default mode for writing STEP. Please test (MFC samples only; note to check compilation with VS 2005) and integrate. |
|
Branch CR25387_2 has been updated by apn. SHA-1: 59d2d2b0483e1eb893de7ebfebaa28f5aa24fbeb Detailed log of new commits: Author: apn Date: Wed Oct 29 12:25:58 2014 +0300 Added #define in function CFileDialog because it takes only 6 parameters in Visual Studio 2005. |
|
Fix has been tested. After small modification ALL is OK including VS++ 2005 |
|
Branch CR25387 has been deleted by inv. SHA-1: 5e907fa76e5000066198c609f669bbee61d58543 |
|
Branch CR25387_1 has been deleted by inv. SHA-1: f3cb7f22ffaa02a4bb56c4474e85261d20131061 |
|
Branch CR25387_2 has been deleted by inv. SHA-1: 59d2d2b0483e1eb893de7ebfebaa28f5aa24fbeb |
occt: master 4084fb64 2014-10-30 09:12:17
Committer: bugmaster Details Diff |
0025387: Error appears during export to STEP operation in ImportExport MFC sample Combo-box for selection of translation mode is available in Export to STEP and CSFDB files. Default valuer for STEP export mode is set to As Is, i.e. automatic selection. Added #define in function CFileDialog because it takes only 6 parameters in Visual Studio 2005. |
Affected Issues 0025387 |
|
mod - samples/mfc/standard/Common/ImportExport/ImportExport.cpp | Diff File | ||
mod - samples/mfc/standard/Common/ImportExport/ImportExport.h | Diff File | ||
mod - samples/mfc/standard/Common/ImportExport/SaveCSFDBDlg.cpp | Diff File | ||
mod - samples/mfc/standard/Common/ImportExport/SaveSTEPDlg.cpp | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-10-16 15:27 | apn | New Issue | |
2014-10-16 15:27 | apn | Assigned To | => abv |
2014-10-16 15:28 | apn | Status | new => assigned |
2014-10-16 15:51 | abv | Note Added: 0033219 | |
2014-10-16 15:51 | abv | Target Version | => 6.8.0 |
2014-10-16 21:18 | abv | Assigned To | abv => apn |
2014-10-20 12:27 | bugmaster | Steps to Reproduce Updated | |
2014-10-23 13:07 | git | Note Added: 0033632 | |
2014-10-23 13:08 | apn | Note Added: 0033634 | |
2014-10-23 13:08 | apn | Test case number | => Not needed |
2014-10-23 13:08 | apn | Assigned To | apn => abv |
2014-10-23 13:08 | apn | Status | assigned => resolved |
2014-10-23 13:30 | abv | Note Added: 0033637 | |
2014-10-23 13:30 | abv | Assigned To | abv => bugmaster |
2014-10-23 13:30 | abv | Status | resolved => reviewed |
2014-10-24 09:21 | abv | Note Added: 0033667 | |
2014-10-24 09:21 | abv | Assigned To | bugmaster => apn |
2014-10-24 09:21 | abv | Status | reviewed => assigned |
2014-10-24 09:33 | abv | Note Added: 0033669 | |
2014-10-24 12:44 | git | Note Added: 0033680 | |
2014-10-24 12:57 |
|
Note Added: 0033682 | |
2014-10-24 12:57 |
|
Assigned To | apn => abv |
2014-10-24 12:57 |
|
Status | assigned => resolved |
2014-10-24 12:58 |
|
Note Edited: 0033682 | |
2014-10-24 13:27 | apn | Note Added: 0033683 | |
2014-10-28 10:35 | git | Note Added: 0033756 | |
2014-10-28 10:36 | abv | Note Added: 0033757 | |
2014-10-28 10:36 | abv | Assigned To | abv => bugmaster |
2014-10-28 10:36 | abv | Status | resolved => reviewed |
2014-10-28 13:34 |
|
Assigned To | bugmaster => apv |
2014-10-28 16:19 |
|
Assigned To | apv => bugmaster |
2014-10-29 12:26 | git | Note Added: 0033810 | |
2014-10-29 13:30 | bugmaster | Note Added: 0033816 | |
2014-10-29 13:30 | bugmaster | Status | reviewed => tested |
2014-10-31 14:03 | bugmaster | Changeset attached | => occt master 4084fb64 |
2014-10-31 14:03 | bugmaster | Status | tested => verified |
2014-10-31 14:03 | bugmaster | Resolution | open => fixed |
2014-11-11 12:43 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 13:03 |
|
Status | verified => closed |
2014-11-12 09:54 | git | Note Added: 0034325 | |
2014-11-12 09:54 | git | Note Added: 0034326 | |
2014-11-12 09:54 | git | Note Added: 0034327 |